--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-10-31  MenTaLguY  <mental@rydia.net>
+
+	* src/util/glib-list.h: adaptor for glib lists
+
 2004-10-30  MenTaLguY  <mental@rydia.net>
 
 	* src/util/list.h: more list cleanups and documentation
