--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-11-01  MenTaLguY  <mental@rydia.net>
+
+	* share/icons/icons.svg: gave bulia's eye icons ids
+
 2004-10-31  MenTaLguY  <mental@rydia.net>
 
 	* src/util/glib-list.h: adaptor for glib lists
